V2.3.0
Enhancements:
- Support more complex json messages.
  For an example see, https://github.com/bellrichm/WeeWX-MQTTSubscribe/wiki/json-example#complex-json

V2.2.3
Fixes:
- Failing when binding is archive and caching is configured because RecordCache was not instantiated.
- Fail when record generation is hardware, binding is loop, and caching is configured.
  As of now this configuration is not supported.
Enhancements:
- Align instructions to a package install. Package installs set the path.
  The use of $BIN_ROOT was misleading/wrong.
- Additional/improved logging.
Internal:
- Revamped management of multiple python versions in local development enviroment.
- Issues waiting for information from submitter are automatcally marked stale and closed.
- Ability to configure python versions to not test with.
  Useful if Appveyor images are broken.
- Update Appveyor build to work with WeeWX v5.

V2.2.2
Fixes:
- When a subset of subfields is ignored, wrong values are extracted from message. 

V2.2.1
Fixes:
- Ability to opt in/out at the subfield level.
Internal:
- Migrate from nosetest to pytest.
- Support for testing against Python 3.10.
- Ability to not run tests against all Ubuntu and Python releases.
  Useful if Appveyor images are broken.

V2.2.0
Fixes:
- Support arrays in json payload
Enhancements:
- total_wrap_around configuration option (#164)

V2.1.0
Fixes:
- Fixed 'HW generation' mode to pull data off queue and discard data that is too old.
Enhancements:
- Support payload types by topic. (#113)
- Support configuring reconnect time out options. (#123)
- Support arrays in json payload (#148)
Beta Enhancements:
- Option to create 'empty' loop packets when MQTT payloads arrive irregularly.
Internal updates:
- Improved logging.
- Tests cleaned up.
- Build cleanup.

V2.0.0
IMPORTANT
Most deprecated options have been removed. 
For a list of options and replacements see, https://github.com/bellrichm/WeeWX-MQTTSubscribe/wiki/Options-removed-in-2.0.0
