@@ -1,5 +1,6 @@
 V2.3.0
 Enhancements:
+- On a connection error, display text reason along with numerical return code.
 - Support more complex json messages.
   For an example see, https://github.com/bellrichm/WeeWX-MQTTSubscribe/wiki/json-example#complex-json
 
